--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-include": "^2.3.1",
     "gulp-uglify": "^1.5.4",
     "gulp": "~3.9.1",
-    "gulp-cli": "~1.2.2"
+    "gulp-cli": "~1.2.2",
+    "yargs": "~7.0.2"
   }
 }
