--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "search.exclude": {
         "**/dist": true,
-        "**/node_modules": true
+        "**/node_modules": true,
+        "**/vendor": true
     }
 }
